[project]
name = "dinov3-imagenet-1k-probes"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
license = "MIT"
authors = [{name = "Yohaï-Eliel Berreby", email = "me@yberreby"}]

[dependency-groups]
dev = [
    "accelerate>=1.11.0",
    "huggingface-hub>=0.36.0",
    "ipython>=9.7.0",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "safetensors>=0.6.2",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.1",
    "yaspin>=3.3.0",
]
